--- a/column-preview-card/Riya Jaiswal/style.css
+++ b/column-preview-card/Riya Jaiswal/style.css
@@ -110,20 +110,26 @@ p {
     border-radius: 0px 10px 10px 0px;
 }
 
+
 @media only screen and (max-width:380px) {
     body {
-    margin:60px 12px;
+    margin:60px 20px;
       }
-  
+  h1{
+margin: 25px 0px;
+  }
     .car{
-        display: block;
+        display:grid;
+        grid-template-columns:repeat(1,1fr);
+    
     }
     #sedans, #suvs, #luxury{
-   width:100vw;
-   padding: 10vw 3vw;
-   margin-right:5px;
+   width:86vw;
+   height: 54vh;
+   padding: 15vw 3vw;
     }
     #sedans{
+
         border-radius: 10px 10px 0px 0px ;
     }
     #luxury{
