--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
+html {
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: Commissioner, sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+  background-color: rgba(252, 252, 252, 0.87);
+}
+
+.main-content {
+  width: 100%;
+  min-height: 250vh;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.out div button {
+  background: hsl(0, 0%, 48%);
+}
+
+.out div button:hover {
+  background: hsl(0, 0%, 48%);
+}
+
+.out {
+  opacity: 0.4;
+}
+
+@media (max-width: 376px) {
+  .App {
+    max-width: 100%;
+  }
 }
